--- a/plex_match/templates/index.html
+++ b/plex_match/templates/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1>API Data</h1>
         <ul class="list-group">
-            {% for item in data %}
+            {% for item in context %}
                 <li class="list-group-item">{{ item }}</li>
             {% endfor %}
         </ul>
